-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 9
-
Component/s: hotspot
-
b37
-
Verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8083117 | emb-9 | Roland Westrelin | P2 | Resolved | Fixed | b37 |
Code in ConnectionGraph::process_call_arguments()
case Op_CallLeafNoFP:
is_arraycopy = (call->as_CallLeaf()->_name != NULL &&
strstr(call->as_CallLeaf()->_name, "arraycopy") != 0);
should deal with new arraycopy node instead.
case Op_CallLeafNoFP:
is_arraycopy = (call->as_CallLeaf()->_name != NULL &&
strstr(call->as_CallLeaf()->_name, "arraycopy") != 0);
should deal with new arraycopy node instead.
- backported by
-
JDK-8083117 escape analysis special case code for array copy broken by 7173584
-
- Resolved
-
- relates to
-
JDK-8060252 JDK-7173584 compiler changes regress SPECjvm2008 on SPARC
-
- Closed
-
-
JDK-7173584 Implement arraycopy as a macro node
-
- Resolved
-