8058746: escape analysis special case code for array copy broken by 7173584

Escape analysis doesn't handler arraycopy nodes properly

Reviewed-by: kvn, iveresov, vlivanov